Add Compressioin and Decompression benchmarks

--- a/Compression.Benchmarks/Compression.Benchmarks.csproj
+++ b/Compression.Benchmarks/Compression.Benchmarks.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="maze.txt">
+    <None Update="bible.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
